# psycris

./: .clang-format  .gitignore  CMakeLists.txt  conanfile.txt  main.cpp  notes.txt
script/: boostrap
src/: CMakeLists.txt  bitmask.hpp  config.cpp  config.hpp  loader.cpp  loader.hpp  logging.cpp  logging.hpp  main.cpp  meta.hpp  psx.cpp  psx.hpp  scheduler.cpp  scheduler.hpp  test_bitmask.cpp  test_bus.cpp  test_runner.cpp
src/cpu/: bus.cpp  bus.hpp  cop0.cpp  cop0.hpp  cpu.cpp  cpu.hpp  decoder.hpp  disassembly.cpp  disassembly.hpp  opcodes.hpp
src/gpu/: disassembly.cpp  disassembly.hpp  gpu.cpp  gpu.hpp
src/hw/: bus.cpp  bus.hpp  dma.hpp  interrupt_control.cpp  interrupt_control.hpp  memory_range.hpp  mmap_device.hpp  ram.hpp
src/hw/devices/: dma.hpp  interrupt_control.cpp  interrupt_control.hpp  ram.hpp  spu.cpp  spu.hpp
src/libemu/: bitmask.hpp  debug.cpp  debug.hpp  fixed_fifo.hpp  logging.cpp  psx.cpp  psx.hpp  scheduler.cpp  scheduler.hpp
src/libemu/bus/: bus.hpp
src/libemu/cpu/: cop0.hpp  cpu.cpp  cpu.hpp
src/libemu/devices/: dma.cpp  dma.hpp  interrupt_control.cpp  interrupt_control.hpp  mmap_device.hpp  ram.hpp  spu.cpp  spu.hpp  timer.cpp  timer.hpp
src/libemu/gpu/: decoder.hpp  gpu.cpp  gpu.hpp
src/libemu/tests/: test_bitmask.cpp  test_bus.cpp  test_fifo.cpp  test_runner.cpp  test_timer.cpp
src/psycris/: config.cpp  config.hpp  loader.cpp  loader.hpp  main.cpp
